feat: enable CORS for frontend access
1. Steps followed from https://cis-projects.github.io/swen90007_course_notes/.
2. Additionally, an example environment file (.env.example) has been included in the backend.

--- a/src/backend/.gitignore
+++ b/src/backend/.gitignore
@@ -1,3 +1,9 @@
+### Secret environment variables
+.env
+.env.*
+!.env.example
+
+### Maven compiled ###
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
