feat: add DB prepopulation mechanic via env variable
Includes demo language insertions in resources/database/load.sql

--- a/src/backend/.env.example
+++ b/src/backend/.env.example
@@ -3,5 +3,9 @@ JDBC_URI=jdbc:postgresql://localhost:5432/dungeons-n-dbs
 JDBC_USERNAME=dungeon_master
 JDBC_PASSWORD=admin
 
+# Database setup
+RESET_DATABASE=false
+POPULATE_DATABASE=false
+
 # CORS configuration
 CORS_ORIGINS_UI=http://localhost:5173
