build: introduce Dockerfile
1. duplicate Dockerfile from a previous project with Hang, Adam & Andrew
2. update .env.examples to highlight changes needed going from a dev environment to docker
3. add root level .env.example and .gitignore files
4. build: change maven from version 24 to more compatible 17

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+## -------------------------------- Backend  -------------------------------- ##
+
 ### Database connection ###
 ## : Docker
 JDBC_URI=jdbc:postgresql://host.docker.internal:5432/dungeons-n-dbs
@@ -12,3 +14,11 @@ POPULATE_DATABASE=false
 
 ### CORS configuration ###
 CORS_ORIGINS_UI=http://localhost:5173
+
+## -------------------------------- Frontend -------------------------------- ##
+
+### API Connection ###
+## : Docker
+VITE_API_BASE_URL=/api
+## : Dev
+# VITE_API_BASE_URL=http://localhost:8080/api
