--- a/src/frontend/.env.example
+++ b/src/frontend/.env.example
@@ -1,1 +1,5 @@
-VITE_API_BASE_URL=http://localhost:8080/api
+### API Connection ###
+## : Docker
+VITE_API_BASE_URL=/api
+## : Dev
+# VITE_API_BASE_URL=http://localhost:8080/api
